--- a/_posts/2016-05-12-Big-O.md
+++ b/_posts/2016-05-12-Big-O.md
@@ -3,4 +3,4 @@ layout: post
 title: Algorithm Time-complexity and Big-O
 ---
 
-###**This is my first post, how exciting!**
+This is my first post, how exciting!
